<resources>
    <string name="app_name">Tsogolo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tsogolo</string>
    <string name="nav_header_subtitle">Identify Your Suitable Career</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_role_models">Role Models</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="exit_warning">Do you want to close this app?</string>
    <string name="title_activity_profiling">ProfilingActivity</string>
    <string name="add_profile">add profile</string>
    <string name="title_activity_career_finder">CareerFinderActivity</string>
    <string name="title_activity_personality_test">PersonalityTestActivity</string>
    <string name="title_activity_career_guide">CareerGuideActivity</string>
    <string name="title_activity_personality_description">PersonalityDescriptionActivity</string>
    <string name="title_activity_first_launch">FirstLaunchActivity</string>
    <string name="dark_mode"><b>Dark Mode</b></string>
    <string name="light_mode">Light Mode</string>
    <string name="title_activity_job_details" />
    <string name="title_activity_jobs" />
</resources>